Css Styles added

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
              </div>
   
              <div class="inputField">
-                 <p class="binaryField">Binary Number</p>
-                 <input type="text" name="binaryDigits" id="getBinary" class="inputField__getBinary"p laceholder="Enter binary digit">
-                 <button class="inputField__submitBinary">Submit</button>
+                 <p class="inputField__binaryField">Binary Number</p>
+                 <input type="text" name="binaryDigits" id="getBinary" class="inputField__getBinary" value="" placeholder="Enter binary digit">
+                 <button class="inputField__submitBinary" id="submit">Convert</button>
              </div>
             </div>
            
