Css styles added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <div class="container">
        <div class="bin2Dec">
+     
            <div class="main-text">
                <i class="fas fa-laptop-code fa-5x"></i>
                 <h1 class="main-text__primary-text">Binary to Decimal</h1>
@@ -19,19 +19,19 @@
 
            <div class="section-2">
             <div class="outputField">
-                <p id="decimal" class="outputField__result"></p> 
+              <span class="output-Text">Decimal Number: </span>  <p id="decimal" class="outputField__result"></p> 
              </div>
-  
+
              <div class="inputField">
+                <i class="fas fa-hourglass-half fa-3x"></i>
                  <p class="inputField__binaryField">Binary Number</p>
                  <input type="text" name="binaryDigits" id="getBinary" class="inputField__getBinary" value="" placeholder="Enter binary digit">
                  <button class="inputField__submitBinary" id="submit">Convert</button>
              </div>
             </div>
-           
-       </div>
    </div>
 
+   <footer>Designed by orisfina</footer>
 
     <script src="app.js"></script>
 </body>
