Css Responsiveness added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
        <div class="bin2Dec">
-     
            <div class="main-text">
                <i class="fas fa-laptop-code fa-5x"></i>
                 <h1 class="main-text__primary-text">Binary to Decimal</h1>
@@ -23,7 +22,6 @@
              </div>
 
              <div class="inputField">
-                <i class="fas fa-hourglass-half fa-3x"></i>
                  <p class="inputField__binaryField">Binary Number</p>
                  <input type="text" name="binaryDigits" id="getBinary" class="inputField__getBinary" value="" placeholder="Enter binary digit">
                  <button class="inputField__submitBinary" id="submit">Convert</button>
@@ -31,7 +29,7 @@
             </div>
    </div>
 
-   <footer>Designed by orisfina</footer>
+   <footer>Designed by <a href="https://www.linkedin.com/in/joshuaoyewole/">Joshua Oyewole (Orisfina)</a></footer>
 
     <script src="app.js"></script>
 </body>
